<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">BldPrsr</string>
	<string name="Name">Name: </string>
	<string name="passStr">Password:</string>
	<string name="login">Login</string>
	<string name="setupName">Setup</string>
	<string name="aboutName">About</string>
	<string name="applabl">Application:</string>
	<string name="appdescrip"> Blood Pressure Tracker</string>
	<string name="appVerLabel">Version:</string>
	<string name="appVer"> R-1.0</string>
	<string name="AddResName">Add Result</string>
	<string name="appContVal"> dubi13@gmail.com</string>
	<string name="appNote">NOTE: </string>
	<string name="appNoteVal"> Please specify \'BPTracker\' in the subject of
		your e-mail.</string>
	<string name="appContact">Contact:</string>
	<string name="appname">BPTracker</string>
	<string name="dbVersion">N/A</string>
	<string name="dbVersionLabel">Database Version: </string>
	<string name="dispRelNotes">Display Release Notes</string>
	<string name="setupTitle">Setup an Account</string>
	<string name="lastNameStr">Last Name: </string>
	<string name="firstNameStr">First Name: </string>
	<string name="email">E-Mail:</string>
	<string name="add">Add</string>
	<string name="Cancel">Cancel</string>
	<string name="gender">Gender</string>
	<string name="age">Age</string>
	<string name="logoutStr">Logout</string>
	<string name="listStr">List Numbers</string>
	<string name="adduser">Add User</string>
	<string name="delStr">Delete</string>
	<string name="updSelection">Update</string>
	<string name="Export">exprt2CSV</string>
	<string name="importDB">Import DB</string>
	<string name="exportDB">Export DB</string>
    <string name="CleanDBStr">Overwrite the Database?</string>
    <string name="ImportDB">Importing file:</string>
    <string name="space"></string>
    <string name="csvFile">/mnt/sdcard/BldPrsr.csv</string>
	<string name="YesString">Yes</string>
	<string name="NoString">No</string>
	<string name="Systolic">Systolic</string>
	<string name="Diastolic">Diastolic</string>
	<string name="Pulse">Pulse</string>
	<string name="Date">Date</string>
	<string name="Delete">Delete</string>
	<string name="SDate">SDate</string>
	<string name="EDate">EDate</string>
	<string name="StartDate">Start Date:</string>
	<string name="EndDate">End Date:</string>
	<string name="ok">OK</string>
	<string name="report">Report</string>
	<string name="Settings">Settings</string>
	<string name="DocEmail">Doctor\'s E-Mail</string>
	<string name="period2display">Period to display</string>
	<string name="displayAll">Display all values</string>
	<string name="displayThisMonth">DIsplay current month</string>
	<string name="ChartsList">Charts to display</string>
</resources>
